--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -1594,6 +1594,7 @@ ${dataLines.join('\n')}
             }
           });
         });
+        waitforGenerateF()
       }
 
       document.getElementById('addCharBottom').addEventListener('click', () => { if (editorFont) editorFont.addChar(); waitforGenerateF(); });
