--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -318,6 +318,7 @@ Copyright (c) 2016 by Fabrice Weinberg
       position: sticky;
       top: 0;
       max-height: 100vh;
+      width: 268px;
       overflow: auto;
       padding: 5px 10px;
       font-size: 16px;
@@ -1362,7 +1363,7 @@ ${dataLines.join('\n')}
                                       `;
           overlayWarning.style.display = "block";
           overlayWarning.style.right = "0";
-          warningWrap.style.width = "450px";
+          warningWrap.style.width = "300px";
         } else {
           overlayWarning.innerHTML = "";
           warningWrap.style.width = "0";
